new functions added to test and ensure SRS